Added updated tests in IngestCoordinatorCommonIT